--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,9 +6,9 @@
 @import url("https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy");
 
 body {
-  text-align: center;
-  /* font-family: "Sorts Mill Goudy", Arial, sans-serif; */
-  font-family: "Sorts Mill Goudy";
+  background-color: #010504;
+  color: white;
+  font-family: "PT Mono", Arial, sans-serif;
 }
 
 div.container {
@@ -18,5 +18,3 @@ div.container {
   justify-content: center;
   grid-gap: 25px;
 }
-
-/* Cleaner forms */
